<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/BgBlue"
    android:layout_marginTop="20dp"
    tools:context=".AboutThisApp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <!-- Back arrow button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back"
            app:tint="@color/Yellow"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logoabout"
            />


        <!--            android:layout_centerInParent="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="16dp"

        -->
        <TextView
            android:id="@+id/theappname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appname"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/Yellow"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_description"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_below="@id/theappname"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/featurestitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/features_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/Yellow"
            android:layout_below="@id/app_description"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/feature3Day_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/feature_3_day_forecast"
            android:textSize="16sp"
            android:layout_below="@id/featurestitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/feature_realtime_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/feature_real_time_update"
            android:textSize="16sp"
            android:layout_below="@id/feature3Day_forecast"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/feature_Compare_cities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_compare_cities"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_below="@id/feature_realtime_update"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp" />

    </RelativeLayout>

</ScrollView>
